--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +37,29 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "."
-} 
+  "homepage": "http://.",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "main": "cypress.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/palesa-pna/CleanCity.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/palesa-pna/CleanCity/issues"
+
+
+    "scripts": {
+  "test": "jest"
+}
+
+  }
+}
+
