--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-   "react-scripts": "5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +40,7 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@testing-library/react": "^16.3.0"
+    "@testing-library/react": "^16.3.0",
+    "cypress": "^14.5.2"
   }
 }
